Added open resource use case in UM Notebook

--- a/demoroot/notebooks/01 User Management.ipynb
+++ b/demoroot/notebooks/01 User Management.ipynb
@@ -42,16 +42,17 @@
     "#-------------------------------------------------------------------------------\n",
     "# Initialise client\n",
     "#-------------------------------------------------------------------------------\n",
-    "base_domain = \"demo.eoepca.org\"\n",
-    "platform_domain = \"auth.\" + base_domain\n",
-    "base_url = \"https://\" + platform_domain\n",
-    "eric_pep= \"http://demo-user-eric-pepapi.\" + base_domain\n",
-    "eric_pep_auth= \"http://demo-user-eric-pep.\"+ base_domain + \"/authorize\"\n",
-    "pdp_url= \"http://\"+platform_domain+\"/pdp\"\n",
-    "authorize_url = 'https://'+platform_domain+'/oxauth/restv1/authorize'\n",
-    "token_url = 'https://'+platform_domain+'/oxauth/restv1/token'\n",
-    "redirect_uri_for_github = f\"https://{platform_domain}/oxauth/auth/passport/img/github.png\"\n",
-    "demo = client.DemoClient(base_url)\n",
+    "base_domain= \"demo.eoepca.org\"\n",
+    "platform_domain= \"auth.\" + base_domain\n",
+    "base_url= \"https://\" + platform_domain\n",
+    "dummy_serv= \"https://dummy-service.\" + base_domain\n",
+    "dummy_pep_auth= \"http://dummy-service-pep.\" + base_domain + \"/authorize\"\n",
+    "dummy_pep_api= \"http://dummy-service-pepapi.\" + base_domain\n",
+    "pdp_url= \"http://\" + platform_domain + \"/pdp\"\n",
+    "authorize_url= 'https://' + platform_domain + '/oxauth/restv1/authorize'\n",
+    "token_url= 'https://' + platform_domain + '/oxauth/restv1/token'\n",
+    "redirect_uri_for_github= f\"https://{platform_domain}/oxauth/auth/passport/img/github.png\"\n",
+    "demo= client.DemoClient(base_url)\n",
     "demo.register_client([redirect_uri_for_github])\n",
     "demo.save_state()"
    ]
@@ -85,10 +86,12 @@
     "#-------------------------------------------------------------------------------\n",
     "# Authenticate as Eric (isOperator: True) and get ID Token\n",
     "#-------------------------------------------------------------------------------\n",
-    "USER_NAME=\"eric\"\n",
-    "USER_PASSWORD=\"defaultPWD\"\n",
-    "operator_id_token = demo.get_id_token(USER_NAME, USER_PASSWORD)\n",
-    "print(\"operator_id_token:\", operator_id_token)"
+    "USER_NAME= \"eric\"\n",
+    "USER_PASSWORD= \"defaultPWD\"\n",
+    "operator_id_token= demo.get_id_token(USER_NAME, USER_PASSWORD)\n",
+    "print(\"operator_id_token:\", operator_id_token)\n",
+    "\n",
+    "client_id, client_secret= demo.get_client_credentials()"
    ]
   },
   {
@@ -107,8 +110,8 @@
    "outputs": [],
    "source": [
     "# Inspect ID Token\n",
-    "jwt_header = jwt.get_unverified_header(operator_id_token)\n",
-    "jwt_payload = jwt.decode(operator_id_token, options={\"verify_signature\": False})\n",
+    "jwt_header= jwt.get_unverified_header(operator_id_token)\n",
+    "jwt_payload= jwt.decode(operator_id_token, options={\"verify_signature\": False})\n",
     "print(\"JWT Header:\", json.dumps(jwt_header, indent = 2), \"\\n---\\nJWT Payload:\", json.dumps(jwt_payload, indent = 2))\n",
     "operator_UID= jwt_payload[\"sub\"]"
    ]
@@ -147,13 +150,12 @@
     "#--------------------------\n",
     "#LINK TO SOCIAL PASSPORT\n",
     "#--------------------------\n",
-    "client_id, client_secret = demo.get_client_credentials()\n",
     "\n",
-    "scope = ['openid', 'email', 'user_name', 'is_operator']\n",
-    "service = OAuth2Service(name=\"foo\", client_id=client_id, client_secret=client_secret, access_token_url=token_url, authorize_url=authorize_url, base_url=base_url)\n",
-    "params = {'scope': scope,'response_type': 'code','redirect_uri': redirect_uri_for_github,'acr_values': 'passport_social'}\n",
+    "scope= ['openid', 'email', 'user_name', 'is_operator']\n",
+    "service= OAuth2Service(name=\"foo\", client_id=client_id, client_secret=client_secret, access_token_url=token_url, authorize_url=authorize_url, base_url=base_url)\n",
+    "params= {'scope': scope,'response_type': 'code','redirect_uri': redirect_uri_for_github,'acr_values': 'passport_social'}\n",
     "\n",
-    "url = service.get_authorize_url(**params)\n",
+    "url= service.get_authorize_url(**params)\n",
     "print(\"Link to Social Passport Login: \")\n",
     "print(url)"
    ]
@@ -176,10 +178,10 @@
     "#--------------------------\n",
     "#TOKEN RETRIEVAL\n",
     "#--------------------------\n",
-    "code_url = input('Please paste redirect URL: ').strip()\n",
-    "code = code_url.split('code=')[1].split('&')[0]\n",
-    "data = {'client_id': client_id, 'client_secret': client_secret, 'code': code, 'grant_type': 'authorization_code', 'redirect_uri': redirect_uri_for_github}\n",
-    "response = requests.post(token_url, data=data)\n",
+    "code_url= input('Please paste redirect URL: ').strip()\n",
+    "code= code_url.split('code=')[1].split('&')[0]\n",
+    "data= {'client_id': client_id, 'client_secret': client_secret, 'code': code, 'grant_type': 'authorization_code', 'redirect_uri': redirect_uri_for_github}\n",
+    "response= requests.post(token_url, data=data)\n",
     "print(response.text)"
    ]
   },
@@ -213,20 +215,20 @@
    "outputs": [],
    "source": [
     "#--------------------------\n",
-    "#INSERT RESOURCE\n",
+    "#INSERT PROTECTED RESOURCE\n",
     "#--------------------------\n",
     "uri= \"/demo/testResource\"\n",
-    "data = '{\"icon_uri\":\"'+uri+'\",\"name\":\"DemoResource\",\"scopes\":[\"protected_access\"]}'\n",
-    "headers = {'Content-Type': 'application/json, Authorization: Bearer '+ operator_id_token}\n",
-    "response = requests.post(eric_pep+'/resources', headers=headers, data=data, verify=False)\n",
+    "data= '{\"icon_uri\":\"'+uri+'\",\"name\":\"DemoResource\",\"scopes\":[\"protected_access\"]}'\n",
+    "headers= {'Content-Type': 'application/json, Authorization: Bearer '+ operator_id_token}\n",
+    "response= requests.post(dummy_pep_api+'/resources', headers=headers, data=data, verify=False)\n",
     "print(\"Resource Insertion with code: \" + str(response))\n",
     "\n",
     "#--------------------------\n",
     "#RESOURCE PUBLIC VISUALIZATION-->Query the resource endpoint to check if the resource is inserted\n",
     "#--------------------------\n",
-    "operation_headers = { 'content-type': \"application/x-www-form-urlencoded\", \"cache-control\": \"no-cache\", \"Authorization\": \"Bearer \"+operator_id_token}\n",
-    "res = requests.get(eric_pep +\"/resources\"+\"?path=\"+uri, headers=headers, verify=False)\n",
-    "k=res.json()\n",
+    "operation_headers= { 'content-type': \"application/x-www-form-urlencoded\", \"cache-control\": \"no-cache\", \"Authorization\": \"Bearer \"+operator_id_token}\n",
+    "res= requests.get(dummy_pep_api +\"/resources\"+\"?path=\"+uri, headers=headers, verify=False)\n",
+    "k= res.json()\n",
     "print(\"Resource found in database: \" + str(k))"
    ]
   },
@@ -249,28 +251,28 @@
     "#--------------------------\n",
     "#GET TICKET-->Naive request to resource with no authorization, ticket returned\n",
     "#--------------------------\n",
-    "rpt=None\n",
-    "print(\"ADES API Processes endpoint:\", eric_pep_auth)\n",
-    "ticket_headers_oper = { 'content-type': \"application/json\", \"cache-control\": \"no-cache\", \"Authorization\": \"Bearer \" + operator_id_token, \"X-Original-Uri\": uri }\n",
-    "tkt = requests.get(eric_pep_auth, headers=ticket_headers_oper, verify=False)\n",
-    "ticket = tkt.headers[\"WWW-Authenticate\"].split(\"ticket=\")[1]\n",
-    "print(\"401 Unauthorized, ticket returned: \"+ticket)\n",
+    "rpt= None\n",
+    "print(\"ADES API Processes endpoint:\", dummy_pep_auth)\n",
+    "ticket_headers_oper= { 'content-type': \"application/json\", \"cache-control\": \"no-cache\", \"Authorization\": \"Bearer \" + operator_id_token, \"X-Original-Uri\": uri }\n",
+    "tkt= requests.get(dummy_pep_auth, headers=ticket_headers_oper, verify=False)\n",
+    "ticket= tkt.headers[\"WWW-Authenticate\"].split(\"ticket=\")[1]\n",
+    "print(\"401 Unauthorized, ticket returned: \" + ticket)\n",
     "\n",
     "#--------------------------\n",
     "#GET RPT-->Request RPT token from UMA endpoints giving a ticket and the user id_token\n",
     "#--------------------------\n",
-    "data = \"claim_token_format=http://openid.net/specs/openid-connect-core-1_0.html#IDToken&claim_token=\"+operator_id_token+\"&ticket=\"+ticket+\"&grant_type=urn%3Aietf%3Aparams%3Aoauth%3Agrant-type%3Auma-ticket&client_id=\"+client_id+\"&client_secret=\"+client_secret+\"&scope=openid\"\n",
+    "data= \"claim_token_format=http://openid.net/specs/openid-connect-core-1_0.html#IDToken&claim_token=\"+operator_id_token+\"&ticket=\"+ticket+\"&grant_type=urn%3Aietf%3Aparams%3Aoauth%3Agrant-type%3Auma-ticket&client_id=\"+client_id+\"&client_secret=\"+client_secret+\"&scope=openid\"\n",
     "rpt_headers= { 'Content-Type': 'application/x-www-form-urlencoded', 'cache-control': 'no-cache' }\n",
-    "rpts_response = requests.post(token_url, data=data, headers=rpt_headers, verify = False)\n",
-    "rpt = rpts_response.json()[\"access_token\"]\n",
+    "rpts_response= requests.post(token_url, data=data, headers=rpt_headers, verify = False)\n",
+    "rpt= rpts_response.json()[\"access_token\"]\n",
     "print(\"The UMA returns: \" + str(rpts_response) + \" with a RPT UMA Token: \" + str(rpt))\n",
     "\n",
     "#--------------------------\n",
     "#ACCESS TO RESOURCE-->The access_token is returned and the request to the resource is retried with approved credentials\n",
     "#--------------------------\n",
-    "headers = { 'content-type': \"application/json\", \"cache-control\": \"no-cache\", \"Authorization\": \"Bearer \"+rpt, \"X-Original-Uri\": uri}\n",
-    "resource_access = requests.get(eric_pep_auth, headers=headers, verify=False)\n",
-    "print(\"Retrying access to resource with proper token: \"+ str(resource_access))"
+    "headers= { 'content-type': \"application/json\", \"cache-control\": \"no-cache\", \"Authorization\": \"Bearer \"+rpt, \"X-Original-Uri\": uri}\n",
+    "resource_access= requests.get(dummy_pep_auth, headers=headers, verify=False)\n",
+    "print(\"Retrying access to resource with proper token: \" + str(resource_access))"
    ]
   },
   {
@@ -293,23 +295,23 @@
     "#--------------------------\n",
     "#USER AUTH\n",
     "#--------------------------\n",
-    "USER_NAME=\"alice\"\n",
-    "USER_PASSWORD=\"defaultPWD\"\n",
-    "alice_id_token = demo.get_id_token(USER_NAME, USER_PASSWORD)\n",
-    "alice_UID =jwt.decode(alice_id_token, options={\"verify_signature\": False})[\"sub\"]\n",
+    "USER_NAME= \"alice\"\n",
+    "USER_PASSWORD= \"defaultPWD\"\n",
+    "alice_id_token= demo.get_id_token(USER_NAME, USER_PASSWORD)\n",
+    "alice_UID= jwt.decode(alice_id_token, options={\"verify_signature\": False})[\"sub\"]\n",
     "\n",
     "#--------------------------\n",
     "#GET TICKET--> 401\n",
     "#--------------------------\n",
-    "ticket_headers_alice = { 'content-type': \"application/json\", \"cache-control\": \"no-cache\", \"Authorization\": \"Bearer \"+alice_id_token, \"X-Original-Uri\": uri}\n",
-    "tkt = requests.get(eric_pep_auth, headers=ticket_headers_alice, verify=False)\n",
-    "ticket = tkt.headers[\"WWW-Authenticate\"].split(\"ticket=\")[1]\n",
+    "ticket_headers_alice= { 'content-type': \"application/json\", \"cache-control\": \"no-cache\", \"Authorization\": \"Bearer \"+alice_id_token, \"X-Original-Uri\": uri}\n",
+    "tkt= requests.get(dummy_pep_auth, headers=ticket_headers_alice, verify=False)\n",
+    "ticket= tkt.headers[\"WWW-Authenticate\"].split(\"ticket=\")[1]\n",
     "print(\"401 Unauthorized, ticket returned: \" + str(ticket))\n",
     "#--------------------------\n",
     "#GET RPT--> 403\n",
     "#--------------------------\n",
-    "data = \"claim_token_format=http://openid.net/specs/openid-connect-core-1_0.html#IDToken&claim_token=\"+alice_id_token+\"&ticket=\"+ticket+\"&grant_type=urn%3Aietf%3Aparams%3Aoauth%3Agrant-type%3Auma-ticket&client_id=\"+client_id+\"&client_secret=\"+client_secret+\"&scope=openid\"\n",
-    "rpts_response = requests.post(token_url, data=data, headers=rpt_headers, verify = False)\n",
+    "data= \"claim_token_format=http://openid.net/specs/openid-connect-core-1_0.html#IDToken&claim_token=\"+alice_id_token+\"&ticket=\"+ticket+\"&grant_type=urn%3Aietf%3Aparams%3Aoauth%3Agrant-type%3Auma-ticket&client_id=\"+client_id+\"&client_secret=\"+client_secret+\"&scope=openid\"\n",
+    "rpts_response= requests.post(token_url, data=data, headers=rpt_headers, verify = False)\n",
     "print(\"Forbidden for non operator user: \" + str(rpts_response))"
    ]
   },
@@ -332,8 +334,8 @@
     "#--------------------------\n",
     "#UPDATE POLICY--> 200\n",
     "#--------------------------\n",
-    "data={'name':'Updated Policy for Demo Resource','description':'Policy modified for demo purpose','config':{'resource_id':k[\"_id\"] ,'action':'get','rules':[{'OR':[{'EQUAL':{'id':operator_UID}},{'EQUAL':{'id':alice_UID}}]}]},'scopes':['protected_access']}\n",
-    "resp, text = demo.update_policy(pdp_url, data, k[\"_id\"], operator_id_token)\n",
+    "data= {'name':'Updated Policy for Demo Resource','description':'Policy modified for demo purpose','config':{'resource_id':k[\"_id\"] ,'action':'get','rules':[{'OR':[{'EQUAL':{'id':operator_UID}},{'EQUAL':{'id':alice_UID}}]}]},'scopes':['protected_access']}\n",
+    "resp, text= demo.update_policy(pdp_url, data, k[\"_id\"], operator_id_token)\n",
     "print(resp)"
    ]
   },
@@ -356,22 +358,97 @@
     "#--------------------------\n",
     "#GET TICKET--> 401\n",
     "#--------------------------\n",
-    "tkt = requests.get(eric_pep_auth, headers=ticket_headers_alice, verify=False)\n",
-    "ticket = tkt.headers[\"WWW-Authenticate\"].split(\"ticket=\")[1]\n",
-    "print(\"401 Unauthorized, ticket returned: \"+ticket)\n",
+    "tkt= requests.get(dummy_pep_auth, headers=ticket_headers_alice, verify=False)\n",
+    "ticket= tkt.headers[\"WWW-Authenticate\"].split(\"ticket=\")[1]\n",
+    "print(\"401 Unauthorized, ticket returned: \" + ticket)\n",
     "#--------------------------\n",
     "#GET RPT--> 200\n",
     "#--------------------------\n",
-    "data = \"claim_token_format=http://openid.net/specs/openid-connect-core-1_0.html#IDToken&claim_token=\"+alice_id_token+\"&ticket=\"+ticket+\"&grant_type=urn%3Aietf%3Aparams%3Aoauth%3Agrant-type%3Auma-ticket&client_id=\"+client_id+\"&client_secret=\"+client_secret+\"&scope=openid\"\n",
-    "rpts_response = requests.post(token_url, data=data, headers=rpt_headers, verify = False)\n",
-    "rpt = rpts_response.json()[\"access_token\"]\n",
+    "data= \"claim_token_format=http://openid.net/specs/openid-connect-core-1_0.html#IDToken&claim_token=\"+alice_id_token+\"&ticket=\"+ticket+\"&grant_type=urn%3Aietf%3Aparams%3Aoauth%3Agrant-type%3Auma-ticket&client_id=\"+client_id+\"&client_secret=\"+client_secret+\"&scope=openid\"\n",
+    "rpts_response= requests.post(token_url, data=data, headers=rpt_headers, verify = False)\n",
+    "rpt= rpts_response.json()[\"access_token\"]\n",
     "print(\"The UMA returns: \" + str(rpts_response) + \" with a RPT UMA Token\" + str(rpt))\n",
     "#--------------------------\n",
     "#ACCESS TO RESOURCE--> 200\n",
     "#--------------------------\n",
-    "headers = { 'content-type': \"application/json\", \"cache-control\": \"no-cache\", \"Authorization\": \"Bearer \"+rpt, \"X-Original-Uri\": uri}\n",
-    "tkt = requests.get(eric_pep_auth, headers=headers, verify=False)\n",
-    "print(\"Retrying access to resource with proper token: \"+ str(tkt))"
+    "headers= { 'content-type': \"application/json\", \"cache-control\": \"no-cache\", \"Authorization\": \"Bearer \"+rpt, \"X-Original-Uri\": uri}\n",
+    "tkt= requests.get(dummy_pep_auth, headers=headers, verify=False)\n",
+    "print(\"Retrying access to resource with proper token: \" + str(tkt))"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "82e6349d",
+   "metadata": {},
+   "source": [
+    "### Open Resource Insertion\n",
+    "The operator will insert a new resource with `open` scope. This will allow to any non authenticated person to access the resource, which means that no authorization header needs to be added in the request. The registration of open resources will still be limited only to operators to avoid unwanted insertions.\n",
+    "After the insertion the resources endpoint will be called to list all resources accesible by the operator, which will list the protected and the open resource used in the current Notebook"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d2da6b87",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#--------------------------\n",
+    "#INSERT OPEN RESOURCE\n",
+    "#--------------------------\n",
+    "open_uri= uri + \"/openException\"\n",
+    "data= '{\"icon_uri\":\"'+open_uri+'\",\"name\":\"OpenResource\",\"resource_scopes\":[\"open\"]}'\n",
+    "headers= {'Content-Type': 'application/json, Authorization: Bearer '+ operator_id_token}\n",
+    "response= requests.post(dummy_pep_api+'/resources', headers=headers, data=data, verify=False)\n",
+    "print(\"Resource Insertion with code: \" + str(response))\n",
+    "\n",
+    "#--------------------------\n",
+    "#RESOURCE OPEN VISUALIZATION-->Query the resource endpoint to check if the open resource is inserted as an operator\n",
+    "#--------------------------\n",
+    "operation_headers= { 'content-type': \"application/x-www-form-urlencoded\", \"cache-control\": \"no-cache\", \"Authorization\": \"Bearer \"+operator_id_token}\n",
+    "res= requests.get(dummy_pep_api +\"/resources\", headers=headers, verify=False)\n",
+    "k= res.json()\n",
+    "print(\"All resources accesible by the user found in database: \")\n",
+    "print(str(k))"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "ce90b508",
+   "metadata": {},
+   "source": [
+    "### Non-Authenticated Access to resources\n",
+    "In this case, a person outside the identity platform will try to access the two resources. The person will first list all open resources by interacting with the PEP resource API and then will check the protection in both cases by accessing the resources. First an attempt to the protected one, which will imply an Unauthorized response from the PEP. Finally a call to the open resource that will result in a direct redirection to the resource and a 200 status code. Note that the user wont use this time any Authorization header on the request to the services."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c4a02ee2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#--------------------------\n",
+    "#RESOURCE OPEN VISUALIZATION-->Query the resource endpoint to check if the open resource is visible by non authenticated person (no token required)\n",
+    "#--------------------------\n",
+    "res= requests.get(dummy_pep_api +\"/resources\", verify=False)\n",
+    "k= res.json()\n",
+    "print(\"Open resource found in database: \")\n",
+    "print(str(k))\n",
+    "\n",
+    "#--------------------------\n",
+    "#PROTECTED ACCESS TO RESOURCE BY NON AUTHENTICATED PERSON-->Query the protected resource to check if the non authenticated person has access (401 expected)\n",
+    "#--------------------------\n",
+    "a= requests.get(dummy_serv + uri, verify=False)\n",
+    "print(\"Unauthorize access to protected resource (no token passed): \"+ str(a))\n",
+    "\n",
+    "#--------------------------\n",
+    "#OPEN ACCESS TO RESOURCE BY NON AUTHENTICATED PERSON-->Query the protected resource to check if the non authenticated person has access (200 expected)\n",
+    "#--------------------------\n",
+    "a= requests.get(dummy_serv + open_uri, verify=False)\n",
+    "print(\"Unauthorize access to open resource (no token passed): \"+ str(a))"
    ]
   }
  ],
