Updated Workspace demo with OGC API- Processes registration

--- a/demoroot/notebooks/06 Workspace Management.ipynb
+++ b/demoroot/notebooks/06 Workspace Management.ipynb
@@ -241,6 +241,53 @@
    "id": "134e4289-92a1-40d8-843e-dc4d92eb6fba",
    "metadata": {},
    "source": [
+    "We will now register an OGC API - Processes instance in the workspace API:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "74f30059-de5d-4884-a650-f3a6a657c988",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "response = requests.post(\n",
+    "    f\"{workspaces_endpoint}/{actual_workspace_name}/register\",\n",
+    "    json={\n",
+    "        \"type\": \"oaproc\",\n",
+    "        \"url\": \"https://demo.pygeoapi.io/stable/processes\",\n",
+    "    }\n",
+    ")\n",
+    "response.raise_for_status()\n",
+    "response"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b0415039-0876-4c18-b073-b6c819d4c156",
+   "metadata": {},
+   "source": [
+    "Check if the OGC API - Processes is actually registered:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d64fd07b-903e-49d5-b321-19505399510f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "time.sleep(3)\n",
+    "response = requests.get(f\"https://resource-catalogue.{actual_workspace_name}.{base_domain}/collections/metadata:main/items?type=service\", headers=dict(f=\"json\", **headers))\n",
+    "response.raise_for_status()\n",
+    "response.json()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "68271309-5073-436b-8e31-4c427e4d1b03",
+   "metadata": {},
+   "source": [
     "Now we create a new collection:"
    ]
   },
