Fix OGC API Processes url to landing page

--- a/demoroot/notebooks/06 Workspace Management.ipynb
+++ b/demoroot/notebooks/06 Workspace Management.ipynb
@@ -255,7 +255,7 @@
     "    f\"{workspaces_endpoint}/{actual_workspace_name}/register\",\n",
     "    json={\n",
     "        \"type\": \"oaproc\",\n",
-    "        \"url\": \"https://demo.pygeoapi.io/stable/processes\",\n",
+    "        \"url\": \"https://demo.pygeoapi.io/stable\",\n",
     "    }\n",
     ")\n",
     "response.raise_for_status()\n",
