--- a/demoroot/notebooks/06 Workspace Management.ipynb
+++ b/demoroot/notebooks/06 Workspace Management.ipynb
@@ -285,6 +285,55 @@
   },
   {
    "cell_type": "markdown",
+   "id": "13ec2cd7-7077-4d87-ac06-094fe4a4e827",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "We will now register an OGC API - Records instance in the workspace API:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "75ce9eb0-48f3-47df-aca8-36d50c6ee5f8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "response = requests.post(\n",
+    "    f\"{workspaces_endpoint}/{actual_workspace_name}/register\",\n",
+    "    json={\n",
+    "        \"type\": \"catalogue\",\n",
+    "        \"url\": \"http://demo.pycsw.org/gisdata\",\n",
+    "    }\n",
+    ")\n",
+    "response.raise_for_status()\n",
+    "response"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "04337d14-0c8f-447e-858e-ba2398850b03",
+   "metadata": {},
+   "source": [
+    "Check if the OGC API - Records is actually registered:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fffa5b86-6748-4582-8b68-1dd1e38ec68f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "time.sleep(3)\n",
+    "response = requests.get(f\"https://resource-catalogue.{actual_workspace_name}.{base_domain}/collections/metadata:main/items?type=service\", headers=dict(f=\"json\", **headers))\n",
+    "response.raise_for_status()\n",
+    "response.json()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "68271309-5073-436b-8e31-4c427e4d1b03",
    "metadata": {},
    "source": [
