Add demo for OGC CSW registration

--- a/demoroot/notebooks/06 Workspace Management.ipynb
+++ b/demoroot/notebooks/06 Workspace Management.ipynb
@@ -334,6 +334,55 @@
   },
   {
    "cell_type": "markdown",
+   "id": "6986270b-6057-4436-b2bd-c92feb1911b0",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "We will now register an OGC CSW instance in the workspace API:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "04d179d8-3e8a-43d5-98c4-e0be9f262c2c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "response = requests.post(\n",
+    "    f\"{workspaces_endpoint}/{actual_workspace_name}/register\",\n",
+    "    json={\n",
+    "        \"type\": \"catalogue\",\n",
+    "        \"url\": \"http://demo.pycsw.org/gisdata/csw\",\n",
+    "    }\n",
+    ")\n",
+    "response.raise_for_status()\n",
+    "response"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a725b623-b454-4d04-987e-b6060b1012ca",
+   "metadata": {},
+   "source": [
+    "Check if the OGC CSW catalogue is actually registered:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "258ac330-c58c-4e00-ae25-1355bb798b8b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "time.sleep(3)\n",
+    "response = requests.get(f\"https://resource-catalogue.{actual_workspace_name}.{base_domain}/collections/metadata:main/items?type=service\", headers=dict(f=\"json\", **headers))\n",
+    "response.raise_for_status()\n",
+    "response.json()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "68271309-5073-436b-8e31-4c427e4d1b03",
    "metadata": {},
    "source": [
