Add `Authorization` header in `POST` request to create a new workspace

--- a/demoroot/notebooks/06 Workspace Management.ipynb
+++ b/demoroot/notebooks/06 Workspace Management.ipynb
@@ -121,7 +121,8 @@
     "    json={\n",
     "        \"preferred_name\": preferred_workspace_name,\n",
     "        \"default_owner\": eric_uid,\n",
-    "    }\n",
+    "    },\n",
+    "    headers=headers\n",
     ")\n",
     "response.raise_for_status()\n",
     "actual_workspace_name = response.json()['name']\n",
@@ -172,7 +173,12 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "52b5ed61-5ac2-441b-8371-e299ff7e5a67",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "response = requests.get(f\"{workspaces_endpoint}/{actual_workspace_name}\")\n",
