Replace pyops with OWSLib OpenSearch client

--- a/demoroot/notebooks/04 Resource Catalogue.ipynb
+++ b/demoroot/notebooks/04 Resource Catalogue.ipynb
@@ -25,6 +25,7 @@
    "source": [
     "from owslib.csw import CatalogueServiceWeb\n",
     "from owslib.ogcapi.records import Records\n",
+    "from owslib.opensearch import OpenSearch\n",
     "from owslib.fes import And, Or, PropertyIsEqualTo, PropertyIsGreaterThanOrEqualTo, PropertyIsLessThanOrEqualTo, PropertyIsLike, BBox, SortBy, SortProperty\n",
     "from geolinks import sniff_link\n",
     "import folium\n",
@@ -952,7 +953,7 @@
    "id": "f576e20e-34f2-4add-adb2-872e7ef44049",
    "metadata": {},
    "source": [
-    "Here, the [pyops](https://github.com/devsf/pyops) Python OpenSearch client is used."
+    "Here, the OWSLib OpenSearch client is used."
    ]
   },
   {
@@ -962,17 +963,65 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pyops"
+    "os = OpenSearch(endpoint)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "22b62eaa-4984-4ace-9254-c60b9f4be84a",
+   "metadata": {},
+   "source": [
+    "We use the description object to retrieve service metadata."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "66a2f60a-01b4-47fe-a014-50700421cd04",
+   "id": "18cf93ee-ffe8-43c2-bb87-8a69a443f04b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "client = pyops.Client(description_xml_url=endpoint)"
+    "os.description.shortname"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bf57b35e-827c-4f2a-90d1-741ab95c7e91",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "os.description.longname"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f7532d00-e504-4040-91fe-6dc72d668ea2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "os.description.description"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "07ed926d-8b0e-441c-8ea4-a44f3f40bdf0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "os.description.urls"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "14eeca54-7b9d-476d-8b81-21d9d6e93fa8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "os.description.tags"
    ]
   },
   {
@@ -980,7 +1029,7 @@
    "id": "86fff97a-1ec6-4586-ba01-950695f36ed0",
    "metadata": {},
    "source": [
-    "and the number of results is shown (note that the page size is 10 by default)"
+    "Then we perform a search using atom encoding."
    ]
   },
   {
@@ -990,7 +1039,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "results = client.search()\n",
+    "results = os.search('application/atom+xml')\n",
     "len(results)"
    ]
   },
