Remove pyops import

--- a/demoroot/notebooks/03 Demo.ipynb
+++ b/demoroot/notebooks/03 Demo.ipynb
@@ -30,8 +30,7 @@
     "from geolinks import sniff_link\n",
     "import folium\n",
     "import requests\n",
-    "from bs4 import BeautifulSoup\n",
-    "import pyops"
+    "from bs4 import BeautifulSoup"
    ]
   },
   {
