--- a/demoroot/notebooks/04 Resource Catalogue.ipynb
+++ b/demoroot/notebooks/04 Resource Catalogue.ipynb
@@ -1753,13 +1753,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Disabled due to POST issue https://github.com/geopython/pycsw/issues/809\n",
-    "#r.collection_item_create(collection_id, data)\n",
+    "r.collection_item_create(collection_id, data)\n",
     "\n",
-    "url = f'{system_catalogue_endpoint}/collections/metadata:main/items'\n",
-    "headers = {'content-type': 'application/geo+json'}\n",
-    "payload = open(record_data)\n",
-    "req = requests.post(url, data=payload, headers=headers)"
+    "# Similar approach using requests\n",
+    "#url = f'{system_catalogue_endpoint}/collections/metadata:main/items'\n",
+    "#headers = {'content-type': 'application/geo+json'}\n",
+    "#payload = open(record_data)\n",
+    "#req = requests.post(url, data=payload, headers=headers)"
    ]
   },
   {
