--- a/demoroot/notebooks/05 Data Access.ipynb
+++ b/demoroot/notebooks/05 Data Access.ipynb
@@ -116,7 +116,7 @@
    "source": [
     "for link in links:\n",
     "    scheme = link['scheme']\n",
-    "    if 'WMS' in scheme:\n",
+    "    if scheme and 'WMS' in scheme:\n",
     "        wms_endpoint=link['url']\n",
     "        print(link['url'])"
    ]
@@ -458,7 +458,7 @@
     "tree = None\n",
     "for link in links:\n",
     "    scheme = link['scheme']\n",
-    "    if 'WCS' in scheme:\n",
+    "    if scheme and 'WCS' in scheme:\n",
     "        print(link['url'])\n",
     "        wcs_endpoint=link['url'].split('?')[0]\n",
     "        wcs_id=link['url'].split('eoid=')[1]\n",
@@ -510,7 +510,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.8.10 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -524,7 +524,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.2"
+   "version": "3.8.10"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
+   }
   }
  },
  "nbformat": 4,
