Add terms and conditions demo

--- a/demoroot/notebooks/01 User Management.ipynb
+++ b/demoroot/notebooks/01 User Management.ipynb
@@ -426,8 +426,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c4a02ee2",
-   "metadata": {},
    "outputs": [],
    "source": [
     "#--------------------------\n",
@@ -449,7 +447,35 @@
     "#--------------------------\n",
     "a= requests.get(dummy_serv + open_uri, verify=False)\n",
     "print(\"Unauthorize access to open resource (no token passed): \"+ str(a))"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### Terms and conditions"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "operator_id_token = demo.get_id_token(USER_NAME, USER_PASSWORD)\n",
+    "uri = \"/demo/testTermsConditions\"\n",
+    "data = '{\"icon_uri\":\"'+uri+'\",\"name\":\"TermsConditionsResource\",\"scopes\":[\"protected_access\"],\"T&C\":{\"term_id\": \"This is a term id\",\"term_description\": \"This is a term description\"}}'\n",
+    "headers = {'Content-Type': 'application/json, Authorization: Bearer '+ operator_id_token}\n",
+    "response = requests.post(dummy_pep_api+'/resources', headers=headers, data=data, verify=False)\n",
+    "print(\"Resource Insertion with code: \" + str(response))"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   }
  ],
  "metadata": {
