Demo cluster workspaces now use minio

--- a/demoroot/notebooks/02 Processing.ipynb
+++ b/demoroot/notebooks/02 Processing.ipynb
@@ -164,7 +164,8 @@
     "import boto3\n",
     "\n",
     "# Init S3 session for Creodias\n",
-    "S3_ENDPOINT = \"https://cf2.cloudferro.com:8080\"\n",
+    "#S3_ENDPOINT = \"https://cf2.cloudferro.com:8080\"\n",
+    "S3_ENDPOINT = \"https://minio.demo.eoepca.org\"\n",
     "session = boto3.session.Session()\n",
     "s3resource = session.resource('s3', aws_access_key_id=s3_access, aws_secret_access_key=s3_secret, endpoint_url=S3_ENDPOINT)\n",
     "\n",
