--- a/demoroot/notebooks/04 Resource Catalogue.ipynb
+++ b/demoroot/notebooks/04 Resource Catalogue.ipynb
@@ -894,7 +894,7 @@
    "outputs": [],
    "source": [
     "workspace_endpoint = f'https://resource-catalogue.{workspace_prefix}-{USER_ERIC}.{base_domain}/csw'\n",
-    "print(f\"Bob's workspace (catalogue): {workspace_endpoint}\")\n",
+    "print(f\"Eric's workspace (catalogue): {workspace_endpoint}\")\n",
     "csw = CatalogueServiceWeb(workspace_endpoint, timeout=30,headers=headers)\n",
     "csw.getrecords2(maxrecords=10)\n",
     "csw.results"
