--- a/demoroot/notebooks/04 Resource Catalogue.ipynb
+++ b/demoroot/notebooks/04 Resource Catalogue.ipynb
@@ -1621,6 +1621,150 @@
    "id": "b7999ab0-acc9-4246-b4c6-87588748f972",
    "metadata": {},
    "source": [
+    "### Registration API demo"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9c15d351-3424-48d2-ad6a-9c3ad80992bc",
+   "metadata": {},
+   "source": [
+    "This is an example on how to use the EOEPCA Registration API to register metadata records in the Resource Catalogue."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7971ead5-38c3-4318-a10b-a1da31befe26",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import requests\n",
+    "import datetime\n",
+    "import time\n",
+    "import json"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bf35762d-579f-4aa7-a93d-948574e5df90",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "base_domain = \"demo.eoepca.org\"\n",
+    "# base_domain = \"develop.eoepca.org\"\n",
+    "registration_endpoint = f'https://registration-api-open.{base_domain}'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "50432710-b002-494d-b5d8-321e388a4c0f",
+   "metadata": {},
+   "source": [
+    "We will now register an ADES instance in the Registration API"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cb78ecf9-39fc-4516-a6d5-d539ab5715d0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "response = requests.post(\n",
+    "    f\"{registration_endpoint}/register\",\n",
+    "    json={\n",
+    "        \"type\": \"ades\",\n",
+    "        \"url\": \"https://demo.pygeoapi.io/stable/processes\",\n",
+    "    }\n",
+    ")\n",
+    "response.raise_for_status()\n",
+    "response"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "921a1af7-47b2-4946-9257-c608166fd3d4",
+   "metadata": {},
+   "source": [
+    "Check if the ADES is actually registered:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a510d41d-703a-4b5a-bbbc-ac604014db08",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "time.sleep(3)\n",
+    "response = requests.get(f\"https://resource-catalogue.{base_domain}/collections/metadata:main/items?type=service\", headers=dict(f=\"json\", **headers))\n",
+    "response.raise_for_status()\n",
+    "response.json()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7805f303-48bc-44c8-990c-6656fc197e72",
+   "metadata": {},
+   "source": [
+    "We will now register a STAC Item from the Registration API JSON endpoint."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0da8ed3a-ea63-4571-a5c3-a014ac898cd8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "url='https://raw.githubusercontent.com/radiantearth/stac-spec/master/examples/core-item.json'\n",
+    "stac_item=requests.get(url).text\n",
+    "#print(stac_item)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a45d55e2-eabd-490b-83b2-11b62a22a068",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "response = requests.post(\n",
+    "    f\"{registration_endpoint}/register-json\",\n",
+    "    json=json.loads(stac_item)\n",
+    ")\n",
+    "response.raise_for_status()\n",
+    "response"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "47f26d90-4493-4bb4-be7d-772c5e3f80f8",
+   "metadata": {},
+   "source": [
+    "Check if the STAC Item is actually registered:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0c5243f9-0905-4fc0-ad57-af5bce4b09fc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "time.sleep(3)\n",
+    "response = requests.get(f\"https://resource-catalogue.{base_domain}/collections/metadata:main/items/20201211_223832_CS2\", headers=dict(f=\"json\", **headers))\n",
+    "response.raise_for_status()\n",
+    "response.json()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d71eb629-31ca-436a-8557-548cca3b8e1a",
+   "metadata": {},
+   "source": [
     "### OGC API Records Transactions demo"
    ]
   },
