processing notebook update

--- a/demoroot/notebooks/02 Processing.ipynb
+++ b/demoroot/notebooks/02 Processing.ipynb
@@ -164,7 +164,6 @@
     "import boto3\n",
     "\n",
     "# Init S3 session for Creodias\n",
-    "#S3_ENDPOINT = \"https://cf2.cloudferro.com:8080\"\n",
     "S3_ENDPOINT = \"https://minio.demo.eoepca.org\"\n",
     "session = boto3.session.Session()\n",
     "s3resource = session.resource('s3', aws_access_key_id=s3_access, aws_secret_access_key=s3_secret, endpoint_url=S3_ENDPOINT)\n",
@@ -350,13 +349,25 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "legal-thunder",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# API Processes - Deploy Application\n",
     "#response, ades_access_token = demo.proc_deploy_application(ades_proc_url, \"../data/app-deploy-body-atom.json\", id_token=user_id_token, access_token=ades_access_token)\n",
     "\n",
     "response, access_token = demo.proc_deploy_application(ades_proc_url, \"../data/app-deploy-body-cwl.json\", id_token=user_id_token, access_token=ades_access_token)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c7f795d1-f97b-4131-8676-7a29a41029b3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "response.content"
    ]
   },
   {
@@ -597,7 +608,7 @@
     "import boto3\n",
     "\n",
     "# Init S3 session for Creodias\n",
-    "S3_ENDPOINT = \"https://cf2.cloudferro.com:8080\"\n",
+    "S3_ENDPOINT = \"https://minio.demo.eoepca.org\"\n",
     "session = boto3.session.Session()\n",
     "s3resource = session.resource('s3', aws_access_key_id=s3_access, aws_secret_access_key=s3_secret, endpoint_url=S3_ENDPOINT)\n",
     "\n",
