Fix user management demo

--- a/demoroot/notebooks/01 User Management.ipynb
+++ b/demoroot/notebooks/01 User Management.ipynb
@@ -466,6 +466,8 @@
    "execution_count": null,
    "outputs": [],
    "source": [
+    "USER_NAME= \"eric\"\n",
+    "USER_PASSWORD= \"defaultPWD\"\n",
     "operator_id_token = demo.get_id_token(USER_NAME, USER_PASSWORD)\n",
     "uri = \"/demo/testTermsConditions\"\n",
     "data = '{\"icon_uri\":\"'+uri+'\",\"name\":\"TermsConditionsResource\",\"scopes\":[\"protected_access\"],\"T&C\":{\"term_id\": \"This is a term id\",\"term_description\": \"This is a term description\"}}'\n",
