feat: added gets to user management notebook

--- a/demoroot/notebooks/01 User Management.ipynb
+++ b/demoroot/notebooks/01 User Management.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "swiss-sender",
    "metadata": {},
    "outputs": [],
@@ -426,6 +426,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "#--------------------------\n",
@@ -447,23 +450,23 @@
     "#--------------------------\n",
     "a= requests.get(dummy_serv + open_uri, verify=False)\n",
     "print(\"Unauthorize access to open resource (no token passed), expected 200: \"+ str(a))"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "### Terms and conditions"
-   ],
    "metadata": {
     "collapsed": false
-   }
+   },
+   "source": [
+    "### Terms and conditions"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "USER_NAME= \"eric\"\n",
@@ -475,10 +478,41 @@
     "headers = {'Content-Type': 'application/json, Authorization: Bearer '+ operator_id_token}\n",
     "response = requests.post(dummy_pep_api+'/resources', headers=headers, data=data, verify=False)\n",
     "print(\"Resource Insertion with code (200 is ok, 422 is resource already inserted): \" + str(response))"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "70477441",
+   "metadata": {},
+   "source": [
+    "### Identity API"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "ad4adf5a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{\"_id\":\"4e80aad5-8065-480d-a42c-fada32a493fc\",\"attributes\":{},\"name\":\"Default Resource\",\"owner\":{\"id\":\"95c52e1b-1c59-4ce2-a0cc-f6eb239db766\"},\"ownerManagedAccess\":false,\"resource_scopes\":[],\"type\":\"urn:resources-management:resources:default\",\"uris\":[\"/*\"]}]\n",
+      "\n"
+     ]
+    }
    ],
-   "metadata": {
-    "collapsed": false
-   }
+   "source": [
+    "base_url = \"http://localhost:5566\"\n",
+    "client_id = \"95c52e1b-1c59-4ce2-a0cc-f6eb239db766\"\n",
+    "get_resources_url = base_url + \"/resources\"\n",
+    "response = requests.get(get_resources_url)\n",
+    "print(response.text)\n",
+    "get_client_policies_url = base_url + \"/policies/\" + client_id\n",
+    "get_client_permissions_url = base_url + \"/permissions/\" + client_id"
+   ]
   }
  ],
  "metadata": {
@@ -497,7 +531,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.2"
+   "version": "3.10.6"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
+   }
   }
  },
  "nbformat": 4,
