--- a/demoroot/notebooks/06 Workspace Management.ipynb
+++ b/demoroot/notebooks/06 Workspace Management.ipynb
@@ -36,7 +36,8 @@
    "source": [
     "base_domain = \"demo.eoepca.org\"\n",
     "# base_domain = \"develop.eoepca.org\"\n",
-    "workspaces_endpoint = f'https://workspace-api-open.{base_domain}/workspaces'"
+    "#workspaces_endpoint = f'https://workspace-api-open.{base_domain}/workspaces'\n",
+    "workspaces_endpoint = f'https://workspace-api.{base_domain}/workspaces'"
    ]
   },
   {
@@ -83,6 +84,25 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "22622410-c811-4115-a8f7-ffa47a726f8c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "USER_ADMIN=\"admin\"\n",
+    "USER_ADMIN_PASSWORD=\"admin_Abcd1234#\"\n",
+    "admin_id_token = demo.get_id_token(USER_ADMIN, USER_ADMIN_PASSWORD)\n",
+    "headers = {\n",
+    "    'Authorization': 'Bearer ' + admin_id_token\n",
+    "}\n",
+    "\n",
+    "jwt_header = jwt.get_unverified_header(admin_id_token)\n",
+    "jwt_payload = jwt.decode(admin_id_token, options={\"verify_signature\": False})\n",
+    "admin_uid = jwt_payload[\"sub\"]"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "a23a0f74-e8d4-4996-bf7c-dc4f373a0263",
    "metadata": {},
@@ -118,9 +138,10 @@
    "source": [
     "response = requests.post(\n",
     "    workspaces_endpoint,\n",
+    "    headers=headers,\n",
     "    json={\n",
     "        \"preferred_name\": preferred_workspace_name,\n",
-    "        \"default_owner\": eric_uid,\n",
+    "        \"default_owner\": admin_uid,\n",
     "    }\n",
     ")\n",
     "response.raise_for_status()\n",
@@ -143,7 +164,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "response = requests.get(f\"{workspaces_endpoint}/{actual_workspace_name}\")\n",
+    "response = requests.get(f\"{workspaces_endpoint}/{actual_workspace_name}\", headers=headers)\n",
     "response.raise_for_status()\n",
     "response.json()"
    ]
@@ -175,7 +196,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "response = requests.get(f\"{workspaces_endpoint}/{actual_workspace_name}\")\n",
+    "response = requests.get(f\"{workspaces_endpoint}/{actual_workspace_name}\", headers=headers)\n",
     "response.raise_for_status()\n",
     "\n",
     "workspace_data = response.json()\n",
@@ -206,6 +227,7 @@
    "source": [
     "response = requests.post(\n",
     "    f\"{workspaces_endpoint}/{actual_workspace_name}/register\",\n",
+    "    headers=headers,\n",
     "    json={\n",
     "        \"type\": \"ades\",\n",
     "        \"url\": \"https://demo.pygeoapi.io/stable/processes\",\n",
@@ -253,6 +275,7 @@
    "source": [
     "response = requests.post(\n",
     "    f\"{workspaces_endpoint}/{actual_workspace_name}/register\",\n",
+    "    headers=headers,\n",
     "    json={\n",
     "        \"type\": \"oaproc\",\n",
     "        \"url\": \"https://demo.pygeoapi.io/stable\",\n",
@@ -302,6 +325,7 @@
    "source": [
     "response = requests.post(\n",
     "    f\"{workspaces_endpoint}/{actual_workspace_name}/register\",\n",
+    "    headers=headers,\n",
     "    json={\n",
     "        \"type\": \"catalogue\",\n",
     "        \"url\": \"http://demo.pycsw.org/gisdata\",\n",
@@ -351,6 +375,7 @@
    "source": [
     "response = requests.post(\n",
     "    f\"{workspaces_endpoint}/{actual_workspace_name}/register\",\n",
+    "    headers=headers,\n",
     "    json={\n",
     "        \"type\": \"catalogue\",\n",
     "        \"url\": \"http://demo.pycsw.org/gisdata/csw\",\n",
@@ -400,6 +425,7 @@
     "\n",
     "response = requests.post(\n",
     "    f\"{workspaces_endpoint}/{actual_workspace_name}/register-collection\",\n",
+    "    headers=headers,\n",
     "    json=collection, # TODO\n",
     ")\n",
     "response.raise_for_status()\n",
@@ -443,7 +469,8 @@
    "outputs": [],
    "source": [
     "import boto3\n",
-    "S3_ENDPOINT = \"https://cf2.cloudferro.com:8080\"\n",
+    "#S3_ENDPOINT = \"https://cf2.cloudferro.com:8080\"\n",
+    "S3_ENDPOINT = \"https://minio.demo.eoepca.org\"\n",
     "session = boto3.session.Session()\n",
     "s3resource = session.resource('s3', aws_access_key_id=s3_access, aws_secret_access_key=s3_secret, endpoint_url=S3_ENDPOINT)\n",
     "object = s3resource.Object(bucket_name, 'application-package/s-expression/s-expression-0_0_2.cwl')\n",
@@ -473,6 +500,7 @@
     "resource_url= f'{bucket_name}/application-package/s-expression/s-expression-0_0_2.cwl'\n",
     "response = requests.post(\n",
     "    f\"{workspaces_endpoint}/{actual_workspace_name}/register\",\n",
+    "    headers=headers,\n",
     "    json={\n",
     "        \"type\": \"application\",\n",
     "        \"url\": resource_url,\n",
@@ -522,6 +550,7 @@
    "source": [
     "response = requests.post(\n",
     "    f\"{workspaces_endpoint}/{actual_workspace_name}/redeploy\",\n",
+    "    headers=headers\n",
     ")\n",
     "response.raise_for_status()\n",
     "response"
@@ -545,6 +574,7 @@
    "source": [
     "response = requests.delete(\n",
     "    f\"{workspaces_endpoint}/{actual_workspace_name}\",\n",
+    "    headers=headers\n",
     ")\n",
     "response.raise_for_status()\n",
     "response"
