--- a/demoroot/notebooks/08 RC Datacube.ipynb
+++ b/demoroot/notebooks/08 RC Datacube.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 1,
    "id": "1b033d27-e72e-47f2-bc7e-67dee474c1de",
    "metadata": {},
    "outputs": [],
@@ -41,9 +41,7 @@
     "from owslib.csw import CatalogueServiceWeb\n",
     "from owslib.ogcapi.records import Records\n",
     "from owslib.fes import And, Or, PropertyIsEqualTo, PropertyIsGreaterThanOrEqualTo, PropertyIsLessThanOrEqualTo, PropertyIsLike, BBox, SortBy, SortProperty\n",
-    "from geolinks import sniff_link\n",
-    "import folium\n",
-    "import json"
+    "from geolinks import sniff_link\n"
    ]
   },
   {
