EOEPCA-950 - Fixes to Processing notebook during v1.3 release testing

--- a/demoroot/notebooks/02 Processing.ipynb
+++ b/demoroot/notebooks/02 Processing.ipynb
@@ -164,7 +164,7 @@
     "import boto3\n",
     "\n",
     "# Init S3 session for Creodias\n",
-    "S3_ENDPOINT = \"https://minio.demo.eoepca.org\"\n",
+    "S3_ENDPOINT = f\"https://minio.{base_domain}\"\n",
     "session = boto3.session.Session()\n",
     "s3resource = session.resource('s3', aws_access_key_id=s3_access, aws_secret_access_key=s3_secret, endpoint_url=S3_ENDPOINT)\n",
     "\n",
@@ -527,7 +527,7 @@
    "source": [
     "result = response.json()[\"StacCatalogUri\"]\n",
     "print(f\"Result Url: {result}\")\n",
-    "result_folder_name = result.rsplit('/', 1)[0].rsplit(':', 1)[1].replace(bucket_name+\"/\",\"\")\n",
+    "result_folder_name = result.rsplit('/', 1)[0].rsplit(':', 1)[1].replace(\"//\"+bucket_name+\"/\",\"\")\n",
     "print(f\"Result foldername: {result_folder_name}\")"
    ]
   },
@@ -608,7 +608,7 @@
     "import boto3\n",
     "\n",
     "# Init S3 session for Creodias\n",
-    "S3_ENDPOINT = \"https://minio.demo.eoepca.org\"\n",
+    "S3_ENDPOINT = f\"https://minio.{base_domain}\"\n",
     "session = boto3.session.Session()\n",
     "s3resource = session.resource('s3', aws_access_key_id=s3_access, aws_secret_access_key=s3_secret, endpoint_url=S3_ENDPOINT)\n",
     "\n",
