Tweaks for deployment guide env

--- a/demoroot/notebooks/02 Processing.ipynb
+++ b/demoroot/notebooks/02 Processing.ipynb
@@ -52,7 +52,7 @@
     "#-------------------------------------------------------------------------------\n",
     "# Initialise client\n",
     "#-------------------------------------------------------------------------------\n",
-    "base_domain = \"demo.eoepca.org\"\n",
+    "base_domain = \"c2023082201.eoepca.rconway.uk\"\n",
     "platform_domain = \"auth.\" + base_domain\n",
     "base_url = \"https://\" + platform_domain\n",
     "demo = client.DemoClient(base_url)\n",
@@ -103,7 +103,7 @@
    "source": [
     "workspace_url = \"https://workspace-api.\" + base_domain\n",
     "workspace_access_token = None\n",
-    "workspace_prefix = \"demo-user-\""
+    "workspace_prefix = \"guide-user-\""
    ]
   },
   {
