--- a/demoroot/notebooks/04 Resource Catalogue.ipynb
+++ b/demoroot/notebooks/04 Resource Catalogue.ipynb
@@ -39,10 +39,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "base_domain = \"demo.eoepca.org\"\n",
+    "base_domain = \"c2023082201.eoepca.rconway.uk\"\n",
     "#base_domain = \"develop.eoepca.org\"\n",
     "#base_domain = \"185.52.193.87.nip.io\"\n",
-    "workspace_prefix = \"demo-user\"\n",
+    "workspace_prefix = \"guide-user\"\n",
     "#workspace_prefix = \"user\""
    ]
   },
@@ -1652,9 +1652,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "base_domain = \"demo.eoepca.org\"\n",
+    "base_domain = \"c2023082201.eoepca.rconway.uk\"\n",
     "# base_domain = \"develop.eoepca.org\"\n",
-    "registration_endpoint = f'https://registration-api-open.{base_domain}'"
+    "registration_endpoint = f'https://registration-api.{base_domain}'"
    ]
   },
   {
@@ -1804,7 +1804,7 @@
    "outputs": [],
    "source": [
     "record_data = '../data/sample-record.json'\n",
-    "base_domain = \"develop.eoepca.org\"\n",
+    "base_domain = \"c2023082201.eoepca.rconway.uk\"\n",
     "system_catalogue_endpoint = f'https://resource-catalogue.{base_domain}'\n",
     "collection_id = 'metadata:main'"
    ]
@@ -2166,7 +2166,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "base_domain = \"demo.eoepca.org\"\n",
+    "base_domain = \"c2023082201.eoepca.rconway.uk\"\n",
     "system_catalogue_endpoint = f'https://resource-catalogue.{base_domain}'"
    ]
   },
